some changes for deploy in pythonanywhere

--- a/accounts/templates/ResetPasswordComplete.html
+++ b/accounts/templates/ResetPasswordComplete.html
@@ -1,5 +1,5 @@
 <!doctype html>
-{% extends "baselog.html" %}
+{% extends "BaseLog.html" %}
 {% load static %}
 {% load myfilters %}
 
@@ -30,19 +30,19 @@
                                 </div>
                                 <div class="row">
                                     <div class="col mt-10">
-										
+
 										<h5 class="d-flex justify-content-center">
-											Your password has been changed successfully. Please &nbsp <a href="{% url 'login' %}">Login</a>            
-										
-                                        
-										
+											Your password has been changed successfully. Please &nbsp <a href="{% url 'login' %}">Login</a>
+
+
+
                                         <div class="text-center">
 
                                         </div>
                                     </div>
 
-									
-                                    
+
+
                                 </div>
                             </form>
                         </div>
