--- a/accounts/templates/ResetPassword.html
+++ b/accounts/templates/ResetPassword.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-{%extends 'baselog.html'%}
+{%extends 'BaseLog.html'%}
 {% load static %}
 {% load myfilters %}
 
@@ -21,23 +21,23 @@
                     </a>
                     <div class="row w-50">
                         <div class=" bg-body col-md-12 rounded shadow-sm p-10 p-lg-15 mx-auto">
-                            <form class="login-form" novalidate="novalidate" id="kt_sign_in_form" action="#" method="post">								 {% csrf_token %}
-
+                            <form class="login-form" novalidate="novalidate" id="kt_sign_in_form" action="#" method="post">
+                            {% csrf_token %}
                                 <div class="d-flex justify-content-center">
                                     <p class="text-dark title">Reset Password</p>
                                 </div>
                                 <div class="row">
                                     <div class="col mt-10">
-										
+
 										<div class="fv-row mb-3">
                                              <label class="form-label fw-bolder text-dark fs-3">&nbsp Email</label>
 												<br>{{form.email.errors|striptags}}
                                                  {{ form.email|addclass:"form-control form-control-lg form-control-solid" }}
                                         </div>
-                                        
-										
+
+
                                         <div class="d-flex justify-content-center mt-8">
-                                             
+
 											<button style="display:inline-block" type="submit" id="kt_sign_in_submit"  class="btn btn-lg form-btn w-50 mb-5 p-5">
                                                 <span class="indicator-label">Send</span>
                                                 <span class="indicator-progress">please waiting...
@@ -48,7 +48,7 @@
                                         </div>
                                     </div>
 
-									
+
                                     <div class="col d-flex justify-content-end">
                                         <img src="{% static '../static/hotel1/public/common-assets/images/login.jpg' %}" class="mx-auto" alt="Login" width="280px" height="300px">
                                     </div>
@@ -76,10 +76,10 @@
 		{% csrf_token %}
 	    <h2 class="text-center">Reset Password</h2>
 		{% for field in form %}
-	    		{{ field.label_tag }} 
+	    		{{ field.label_tag }}
 	        	{{ field }}
 	        	{% if field.errors %}
-	        		<small>{{ field.errors|striptags  }}</small> 
+	        		<small>{{ field.errors|striptags  }}</small>
 	        	{% endif %}
 		{% endfor %}
 		<div class="form-buttons">
